--- a/data_generator_ver1/style.css
+++ b/data_generator_ver1/style.css
@@ -351,4 +351,13 @@ input[type="checkbox"] {
     padding: 1rem;
     border-radius: 6px;
     border: 1px solid #fee2e2;
+}.close-btn {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    background: transparent;
+    border: none;
+    font-size: 1.5rem;
+    cursor: pointer;
 }
+
